--- a/L4/variable-and-data-types.ipynb
+++ b/L4/variable-and-data-types.ipynb
@@ -237,7 +237,7 @@
    "id": "695f898e",
    "metadata": {},
    "source": [
-    "# SEQUENCES"
+    "# Sequences"
    ]
   },
   {
@@ -245,7 +245,7 @@
    "id": "0f16283c",
    "metadata": {},
    "source": [
-    "# List"
+    "LIST"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "id": "1ba9f230",
    "metadata": {},
    "source": [
-    "# Tuple"
+    "TUPLE"
    ]
   },
   {
@@ -442,7 +442,7 @@
    "id": "8de8dcb7",
    "metadata": {},
    "source": [
-    "# Dictionary"
+    "DICTIONARY"
    ]
   },
   {
