--- a/L5/arithmetic-operators.ipynb
+++ b/L5/arithmetic-operators.ipynb
@@ -22,7 +22,7 @@
    "id": "d5e8b383",
    "metadata": {},
    "source": [
-    "# Addition"
+    "ADDITION"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "id": "89fa06f0",
    "metadata": {},
    "source": [
-    "# Subtraction"
+    "SUBTRACTION"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "id": "8cd4171b",
    "metadata": {},
    "source": [
-    "# Multiplication"
+    "MULTIPLICATION"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "id": "72b880f8",
    "metadata": {},
    "source": [
-    "# Division"
+    "DIVISION"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "id": "4641c521",
    "metadata": {},
    "source": [
-    "# Floor Division"
+    "FLOOR DIVISION"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "id": "0f58c8a0",
    "metadata": {},
    "source": [
-    "# Modulo"
+    "MODULO"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "id": "f55ac05e",
    "metadata": {},
    "source": [
-    "# Increment"
+    "INCREMENT"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "id": "b79d0175",
    "metadata": {},
    "source": [
-    "# Decrement"
+    "DECREMENT"
    ]
   },
   {
