--- a/L6/relational-operators.ipynb
+++ b/L6/relational-operators.ipynb
@@ -22,7 +22,7 @@
    "id": "ecc83be2",
    "metadata": {},
    "source": [
-    "# Equal to"
+    "EQUAL TO"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "id": "09d0bd63",
    "metadata": {},
    "source": [
-    "# Not equal to"
+    "NOT EQUAL TO"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "id": "b5496427",
    "metadata": {},
    "source": [
-    "# Greater than"
+    "GREATER THAN"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "id": "28ae5f2c",
    "metadata": {},
    "source": [
-    "# Less than"
+    "LESS THAN "
    ]
   },
   {
@@ -231,6 +231,114 @@
     "a = 0\n",
     "b = 5\n",
     "a < b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bd1b0a2",
+   "metadata": {},
+   "source": [
+    "GREATER THAN OR EQUAL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "37d93e64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "b = 3\n",
+    "a >= b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f9e7d630",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "b = 3\n",
+    "a >= b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f6f1c84",
+   "metadata": {},
+   "source": [
+    "LESS THAN OR EQUAL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1be30271",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "b = 3\n",
+    "a <= b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6501f3f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "b = 3\n",
+    "a <= b"
    ]
   }
  ],
