allow changes and add L10 and L11

--- a/L4/variable-and-data-types.ipynb
+++ b/L4/variable-and-data-types.ipynb
@@ -5,7 +5,7 @@
    "id": "e699a6e2",
    "metadata": {},
    "source": [
-    "# Variables and Data Types <hr style= \"boarder: 2.5px solid #FFC0CB \"></hr>\n"
+    "# Variables and Data Types <hr style= \"border: 2.5px solid #964B00 \"></hr>\n"
    ]
   },
   {
