--- a/L5/arithmetic-operators.ipynb
+++ b/L5/arithmetic-operators.ipynb
@@ -5,7 +5,7 @@
    "id": "74222af4",
    "metadata": {},
    "source": [
-    "# Arithmetic Operators <hr style= \"boarder: 2.5px solid #FFC0CB \"></hr>"
+    "# Arithmetic Operators <hr style= \"border: 2.5px solid #964B00 \"></hr>"
    ]
   },
   {
