--- a/L6/relational-operators.ipynb
+++ b/L6/relational-operators.ipynb
@@ -5,7 +5,7 @@
    "id": "f0d9bda9",
    "metadata": {},
    "source": [
-    "# Relational Operators <hr style =\"boarder: 2.5px solid #FFC0CB \"> </hr>"
+    "# Relational Operators <hr style =\"border: 2.5px solid #964B00 \"></hr>"
    ]
   },
   {
