--- a/L9/logical-operators.ipynb
+++ b/L9/logical-operators.ipynb
@@ -5,7 +5,7 @@
    "id": "7cf54071",
    "metadata": {},
    "source": [
-    "# Logical Operators <hr style =\"boarder: 2.5px solid #FFC0CB \"> </hr>"
+    "# Logical Operators <hr style =\"border: 2.5px solid #964B00 \"></hr>"
    ]
   },
   {
