--- a/L8/if-else.ipynb
+++ b/L8/if-else.ipynb
@@ -5,7 +5,7 @@
    "id": "c4283962",
    "metadata": {},
    "source": [
-    "# if-else statement <hr style =\"boarder: 2.5px solid #FFC0CB \"> </hr>"
+    "# if-else statement <hr style =\"border: 2.5px solid #964B00 \"> </hr>"
    ]
   },
   {
